# MarkBridge

./: .env.example  .gitignore  README.md  parser_decision_tree_ys.drawio.xml  parser_decision_tree_ys_redrawn.drawio.xml  parser_decision_tree_ys_ui_backend.drawio.xml  pyproject.toml
docs/: 00-project-charter.md  01-architecture-spec.md  02-agent-operating-model.md  03-wbs.md  04-decision-log.md  05-inspection-feature-matrix.md  06-routing-policy.md  07-parser-capability-registry.md  08-session-history.md  09-runtime-parser-status.md  10-implementation-backlog.md  11-installation-log.md  12-google-ai-studio-ui-prompt.md  13-backend-smoke-log.md  14-resume-brief.md  15-ui-api-contract.md  16-processing-and-highlight-flow.md  17-resume-brief.md  18-downstream-handoff-contract.md  19-repair-benchmark-and-evaluation.md  20-architecture-and-delivery-overview.md  21-resolution-first-execution-plan.md  22-chunk-boundary-and-format-expansion.md  23-chunk-boundary-and-legacy-format-plan.md  24-parsing-policy-and-tuning-guide.md  25-parse-markdown-export-api-confluence.md  26-doc-and-hwp-execution-plan.md  27-current-parsing-runtime.md  28-parsing-decision-tree.md  30-confluence-parsing-guide.md  31-active-work-plan.md  32-document-ir-chunking-readiness.md  33-bmt-document-ir-audit.md  45-retrieval-qna-searchability-check.md
frontend/: .env.example  README.md  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
scripts/: run_api_with_log.sh  stop_api.sh  tail_api_log.sh
src/markbridge/: __init__.py  cli.py  (+2 more)
(+57 files in other folders)
