[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markbridge"
version = "0.1.0"
description = "Document-to-Markdown parsing pipeline for insurance CRM documents."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "docling>=2.84.0",
    "fastapi>=0.115",
    "markitdown[docx,xlsx,pdf]>=0.1.5",
    "openai>=1.40",
    "pdfplumber>=0.11.9",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]
